# cbtc-lib

./: .env.example  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  clippy.toml  env.nu  environments.example.toml  justfile  recipients.csv
.github/: dependabot.yml
.github/workflows/: security.yml
cbtc-dars/: 00_UploadDars.sc  00_ValidateDars.sc  README.md  expected_packages.json  scala-prerequisites.md  upload_dars.sh
cbtc-dars/dars/cbtc/: cbtc-1.1.0.dar  cbtc-1.1.1.dar  cbtc-1.2.0.dar
cbtc-dars/dars/dependencies/: Terms.and.Conditions.for.Canton.Network.Utility.txt  utility-collateral-app-v1-1.0.0.dar  utility-commercials-v0-0.0.1.dar  utility-commercials-v0-0.1.0.dar  utility-commercials-v0-0.2.0.dar  utility-commercials-v0-0.2.1.dar  utility-commercials-v0-0.2.2.dar  utility-credential-app-v0-0.0.2.dar  utility-credential-app-v0-0.1.0.dar  utility-credential-app-v0-0.2.0.dar  utility-credential-app-v0-0.2.1.dar  utility-credential-app-v0-0.2.2.dar  utility-credential-app-v0-0.2.3.dar  utility-credential-app-v0-0.2.4.dar  utility-credential-v0-0.0.1.dar  utility-credential-v0-0.0.3.dar  utility-credential-v0-0.1.0.dar  utility-registry-app-v0-0.0.1.dar  utility-registry-app-v0-0.1.0.dar  utility-registry-app-v0-0.2.0.dar  utility-registry-app-v0-0.3.0.dar  utility-registry-app-v0-0.3.1.dar  utility-registry-app-v0-0.4.0.dar  utility-registry-holding-v0-0.0.1.dar  utility-registry-holding-v0-0.0.2.dar  utility-registry-holding-v0-0.1.0.dar  utility-registry-holding-v0-0.1.1.dar  utility-registry-holding-v0-0.1.2.dar  utility-registry-holding-v0-0.2.1.dar  utility-registry-operator-v0-0.0.1.dar  utility-registry-operator-v0-0.0.2.dar  utility-registry-v0-0.0.1.dar  utility-registry-v0-0.1.0.dar  utility-registry-v0-0.2.0.dar  utility-registry-v0-0.3.0.dar  utility-registry-v0-0.3.1.dar  utility-registry-v0-0.4.0.dar  utility-registry-v0-0.6.0.dar  utility-settlement-app-v1-1.0.0.dar  utility-settlement-app-v1-1.1.0.dar  (+2 more)
cbtc-dars/misc/: connect.conf
cbtc-tui/: Cargo.toml  README.md
cbtc-tui/src/: app.rs  config.rs  env_import.rs  error.rs  event.rs  main.rs  ops.rs  session.rs  theme.rs  ui.rs
crates/cbtc/: Cargo.toml
crates/cbtc/src/: accept.rs  active_contracts.rs  auth0.rs  batch.rs  cancel_offers.rs  consolidate.rs  distribute.rs  lib.rs  split.rs  transfer.rs  utils.rs  withdraw.rs
crates/common/: Cargo.toml
crates/common/src/: accept.rs  consts.rs  lib.rs  submission.rs  transfer.rs  transfer_factory.rs
crates/cryptography/: Cargo.toml
crates/cryptography/src/symmetric/: aes_256_gcm.rs
crates/examples/: Cargo.toml  README.md
crates/examples/examples/: batch_distribute.rs  check_balance.rs  monitor_deposits.rs  redeem_cbtc_flow.rs  send_cbtc.rs
crates/examples/src/: accept_transfers.rs  accept_transfers_auth0.rs  batch_distribute.rs  batch_with_callback.rs  cancel_offers.rs  check_balance.rs  check_balance_auth0.rs  check_withdraw_requests_auth0.rs  consolidate_utxos.rs  consolidate_utxos_auth0.rs  list_contracts.rs  list_deposit_addresses_auth0.rs  list_incoming_offers.rs  list_outgoing_offers.rs  mint_cbtc_auth0.rs  mint_cbtc_flow.rs  monitor_deposits.rs  redeem_cbtc_auth0.rs  redeem_cbtc_flow.rs  send_cbtc.rs  send_cbtc_auth0.rs  stream.rs  stream_auth0.rs  test_burn_cbtc.rs  withdraw_transfers.rs
crates/keycloak/: Cargo.toml
crates/keycloak/src/: lib.rs  login.rs  updater.rs
crates/ledger/: Cargo.toml
crates/ledger/src/: active_contracts.rs  client.rs  common.rs  ledger_end.rs  lib.rs  submit.rs  utils.rs
crates/ledger/src/websocket/: active_contracts.rs  mod.rs  update.rs
crates/mint_redeem/: Burn_API.md  Cargo.toml  Mint_API.md  README.md
crates/mint_redeem/src/: attestor.rs  constants.rs  mint.rs  models.rs  redeem.rs
crates/registry/: Cargo.toml
crates/registry/src/: accept_context.rs  consts.rs  lib.rs  transfer_factory.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: amulet_rules.rs  lib.rs  mining_rounds.rs
docs/: CBTC API Reference Canton Ledger API for Developer fc72c879eafa431aabd3d3819624513a.md  CBTC Authentication JWT, Keycloak, and Auth0 Setup f70aadd884704f53b75c5ca5a271829d.md  CBTC Minting and Burning: Convert BTC to CBTC on Canton.md  CBTC Overview Wrapped Bitcoin on the Canton Networ c7a3c46a28ef41b5b76b3e55d4b143ab.md  CBTC Quick Start: Mint Your First Wrapped Bitcoin in 15 Minutes.md  CBTC Testnet Guide Sandbox Environment for Develop a17bfb91c2e44fbc8f20a30021124af7.md  Instrument ID Management eaf7d2ed767c41408a1185b73d7074e7.md  Integration Guides 60ec422efa12422ebc8837bbcb79a970.md  SDK Setup and Installation cbtc-lib and Canton CLI 3ff6279783d446499c693f1cc088e956.md  Security Deep Dive 06c19c50f4ee4a28b008ad425bf812a5.md  Technical Reference 8d80205478bd42b4885ef18732e17880.md  integration_test_extension_plan.md  integration_test_plan.md
docs/superpowers/plans/: 2026-03-27-credential-and-limits.md  2026-03-30-integration-test-extension.md
docs/superpowers/specs/: 2026-03-27-credential-and-limits-design.md  2026-03-30-integration-test-extension-design.md
examples/: Cargo.toml  README.md  accept_transfers.rs  allocate_cbtc.rs  batch_distribute.rs  batch_with_callback.rs  cancel_offers.rs  check_balance.rs  check_dars.rs  check_withdraw_requests.rs  credentials.rs  delete_executed_transfers.rs  generate_manifest.rs  integration_test.rs  list_deposit_addresses.rs  list_deposit_addresses_client_credential.rs  list_incoming_offers.rs  list_outgoing_offers.rs  list_withdraw_accounts.rs  mint_cbtc_flow.rs  redeem_cbtc_flow.rs  send_cbtc.rs  stream.rs  test_burn_cbtc.rs
examples/src/: check_withdraw_requests.rs  delete_executed_transfers.rs  test_burn_cbtc.rs
src/: accept.rs  active_contracts.rs  allocation.rs  auth.rs  batch.rs  cancel_offers.rs  consolidate.rs  credentials.rs  dar_check.rs  distribute.rs  event_helpers.rs  lib.rs  reject.rs  split.rs  transfer.rs  utils.rs
src/mint_redeem/: attestor.rs  mint.rs  mod.rs  models.rs  redeem.rs
