[workspace]
members = [
  "crates/ledger",
  "crates/cryptography",
  "crates/keycloak",
  "crates/wallet",
  "crates/cbtc",
  "crates/registry",
  "crates/common",
  "crates/examples",
  "crates/mint_redeem",
]
resolver = "2"

[workspace.package]
license = "MIT"

[workspace.dependencies]
dotenvy = "0.15"
