[package]
name = "cbtc"
version = "0.1.0"
edition = "2024"

[dependencies]
ledger = { git = "ssh://git@github.com/DLC-link/bitsafe-lib-rs", branch = "main" }
common = { git = "ssh://git@github.com/DLC-link/bitsafe-lib-rs", branch = "main" }
registry = { git = "ssh://git@github.com/DLC-link/bitsafe-lib-rs", branch = "main" }
keycloak = { git = "ssh://git@github.com/DLC-link/bitsafe-lib-rs", branch = "main" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
chrono = "0.4.42"
uuid = { version = "1.18", features = ["v4"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
dotenvy = "0.15"
base64 = "0.22"
log = "0.4"
canton-api-client = "3.3.0-0.1.0"
reqwest = { version = "0.12.24", features = ["json"] }

[dev-dependencies]
