[package]
name = "cbtc-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
canton-api-client = "3.6.0-0.1.0"
cbtc = { path = ".." }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
keycloak = { git = "ssh://git@github.com/DLC-link/canton-lib", tag = "v0.6.0" }
ledger = { git = "ssh://git@github.com/DLC-link/canton-lib", tag = "v0.6.0" }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
