[package]
name = "cbtc-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
canton-api-client = "3.6.0-0.1.0"
cbtc = { path = ".." }
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
common = { git = "ssh://git@github.com/DLC-link/canton-lib", rev = "c048dd78c85c0dc8b540d2f32a1ba1662fe3f7fb" }
dirs = "5"
keycloak = { git = "ssh://git@github.com/DLC-link/canton-lib", rev = "c048dd78c85c0dc8b540d2f32a1ba1662fe3f7fb" }
ledger = { git = "ssh://git@github.com/DLC-link/canton-lib", rev = "c048dd78c85c0dc8b540d2f32a1ba1662fe3f7fb" }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
