[package]
name = "cbtc"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
ledger = { path = "../ledger" }
common = { path = "../common" }
registry = { path = "../registry" }
keycloak = { path = "../keycloak" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
chrono = "0.4.42"
uuid = { version = "1.18", features = ["v4"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
dotenvy = { workspace = true }
base64 = "0.22"

[dev-dependencies]
