[package]
name = "examples"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

[dependencies]
cbtc = { path = "../cbtc" }
common = { path = "../common" }
keycloak = { path = "../keycloak" }
ledger = { path = "../ledger" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.42"
dotenvy = { workspace = true }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
