[package]
name = "examples"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish = false

[[bin]]
name = "accept_transfers"
path = "src/accept_transfers.rs"

[[bin]]
name = "batch_distribute"
path = "src/batch_distribute.rs"

[[bin]]
name = "batch_with_callback"
path = "src/batch_with_callback.rs"

[[bin]]
name = "check_balance"
path = "src/check_balance.rs"

[[bin]]
name = "consolidate_utxos"
path = "src/consolidate_utxos.rs"

[[bin]]
name = "mint_cbtc_flow"
path = "src/mint_cbtc_flow.rs"

[[bin]]
name = "monitor_deposits"
path = "src/monitor_deposits.rs"

[[bin]]
name = "redeem_cbtc_flow"
path = "src/redeem_cbtc_flow.rs"

[[bin]]
name = "send_cbtc"
path = "src/send_cbtc.rs"

[[bin]]
name = "test_burn_cbtc"
path = "src/test_burn_cbtc.rs"

[[bin]]
name = "list_incoming_offers"
path = "src/list_incoming_offers.rs"

[[bin]]
name = "list_outgoing_offers"
path = "src/list_outgoing_offers.rs"

[[bin]]
name = "stream_cbtc"
path = "src/stream.rs"

[[bin]]
name = "cancel_offers"
path = "src/cancel_offers.rs"

[dependencies]
cbtc = { path = "../cbtc" }
common = { path = "../common" }
keycloak = { path = "../keycloak" }
ledger = { path = "../ledger" }
mint_redeem = { path = "../mint_redeem" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.42"
dotenvy = { workspace = true }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
