[package]
name = "ledger"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
canton-api-client = "3.3.0-0.1.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.141"
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
rand = "0.8"
base64 = "0.22.1"
url = "2.5.4"
log = "0.4.17"
common = { path = "../common" }

[dev-dependencies]
keycloak = { path = "../keycloak" }
tokio = { version = "1.48", features = ["full"] }
tokio-macros = "2.5.0"
dotenvy = { workspace = true }
