[package]
name = "mint_redeem"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
ledger = { path = "../ledger" }
common = { path = "../common" }
keycloak = { path = "../keycloak" }
canton-api-client = "3.3.0-0.1.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.48.0", features = ["full"] }
log = "0.4.17"
uuid = { version = "1.18", features = ["v4"] }
base64 = "0.21"

[dev-dependencies]
dotenvy = { workspace = true }
