[package]
name = "registry"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
common = { path = "../common" }
reqwest = { version = "0.12.24", features = ["json"] }
serde_json = "1"

[dev-dependencies]
chrono = "0.4.42"
keycloak = { path = "../keycloak" }
cbtc = { path = "../cbtc" }
tokio = { version = "1.48", features = ["full"] }
dotenvy = { workspace = true }
